force-app/main/default/objects/Customer_Query__c/Customer_Query__c.object-meta.xml
<CustomObject>
    <label>Customer Query</label>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Customer Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Query</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>