force-app/main/default/objects/Customer_Query__c/fields/Auto_Closed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Closed</label>
    <type>Checkbox</type>
</CustomField>