force-app/main/default/objects/Customer_Query__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Customer Query</relationshipLabel>
    <relationshipName>Customer_Query</relationshipName>
    <type>Lookup</type>
</CustomField>