force-app/main/default/objects/Customer_Query__c/fields/CRM_s_Comment__c.field-meta.xml
<CustomField>
    <fullName>CRM_s_Comment__c</fullName>
    <label>CRM&apos;s Comment</label>
    <type>TextArea</type>
</CustomField>