force-app/main/default/objects/Customer_Query__c/fields/Customer_Master__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Master</label>
    <referenceTo>Customer_Master__c</referenceTo>
    <relationshipLabel>Customer Query</relationshipLabel>
    <relationshipName>Customer_Query</relationshipName>
    <type>Lookup</type>
</CustomField>