force-app/main/default/objects/Customer_Query__c/fields/Escalation_History__c.field-meta.xml
<CustomField>
    <fullName>Escalation_History__c</fullName>
    <label>Escalation_History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>