force-app/main/default/objects/Customer_Query__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
                <default>true</default>
                <label>Executive</label>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>