force-app/main/default/objects/Customer_Query__c/fields/Feedback_Detail__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Detail__c</fullName>
    <label>Feedback Detail</label>
    <type>TextArea</type>
</CustomField>