force-app/main/default/objects/Customer_Query__c/fields/Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Rating__c</fullName>
    <label>Feedback Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>