force-app/main/default/objects/Customer_Query__c/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>