force-app/main/default/objects/Customer_Query__c/fields/Feedback_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Submitted_Time__c</fullName>
    <label>Feedback Submitted Time</label>
    <type>DateTime</type>
</CustomField>