force-app/main/default/objects/Customer_Query__c/fields/Lapse_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Lapse_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lapse_Email_Sent</label>
    <type>Checkbox</type>
</CustomField>