force-app/main/default/objects/Customer_Query__c/fields/Next_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Escalation_Date__c</fullName>
    <label>Next Escalation Date</label>
    <type>Date</type>
</CustomField>