force-app/main/default/objects/Customer_Query__c/fields/Other_Query__c.field-meta.xml
<CustomField>
    <fullName>Other_Query__c</fullName>
    <label>Other Query</label>
    <length>220</length>
    <type>Text</type>
</CustomField>