force-app/main/default/objects/Customer_Query__c/fields/Query_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Sub_Type__c</fullName>
    <label>Query Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Booking form Copy</fullName>
            </value>
            <value>
                <fullName>Allotment letter Copy</fullName>
            </value>
            <value>
                <fullName>Welcome letter Copy</fullName>
            </value>
            <value>
                <fullName>Invoice Copy</fullName>
            </value>
            <value>
                <fullName>Receipt Copy</fullName>
            </value>
            <value>
                <fullName>Sale Agreement Copy</fullName>
            </value>
            <value>
                <fullName>Unit floor plan/Master Plan</fullName>
            </value>
            <value>
                <fullName>Statement of Account</fullName>
            </value>
            <value>
                <fullName>Interest Report</fullName>
            </value>
            <value>
                <fullName>Sale Deed Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>