force-app/main/default/objects/Customer_Query__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents Query</fullName>
            </value>
            <value>
                <fullName>Other Query</fullName>
            </value>
            <value>
                <fullName>Account and Finance Query</fullName>
                <isActive>false</isActive>
                <label>Account and Finance Query</label>
            </value>
            <value>
                <fullName>Admin Query</fullName>
                <isActive>false</isActive>
                <label>Admin Query</label>
            </value>
            <value>
                <fullName>CRM Query</fullName>
                <isActive>false</isActive>
                <label>CRM Query</label>
            </value>
            <value>
                <fullName>Legal Query</fullName>
                <isActive>false</isActive>
                <label>Legal Query</label>
            </value>
            <value>
                <fullName>Project Query</fullName>
                <isActive>false</isActive>
                <label>Project Query</label>
            </value>
            <value>
                <fullName>Sales and Marketing Query</fullName>
                <isActive>false</isActive>
                <label>Sales and Marketing Query</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>