force-app/main/default/objects/Customer_Query__c/fields/Reassignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Reason__c</fullName>
    <label>Reassignment_Reason</label>
    <type>TextArea</type>
</CustomField>