force-app/main/default/objects/Customer_Query__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Customer Query</relationshipLabel>
    <relationshipName>Customer_Query</relationshipName>
    <type>Lookup</type>
</CustomField>